Update db and reset.css, fix overflow

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -45,6 +45,10 @@ hr {
   color: inherit; /* Correct border color in Firefox. */
 }
 
+p {
+  margin: 0;
+}
+
 details,
 main {
   display: block; /* Render the `main` element consistently in IE. */
